# afrim

./: .gitignore  CHANGELOG.md  Cargo.toml  FAQ.md  LICENSE  README.md  rust-toolchain.toml
.github/: FUNDING.yml
.github/workflows/: coverage.yml  rust.yml  web.yml
clafrica/: Cargo.toml
clafrica-lib/: Cargo.toml
clafrica-lib/data/: sample.txt
clafrica-lib/src/: lib.rs
clafrica/data/: bad_script.toml  blank_sample.toml  config_sample.toml  data_sample.toml  data_sample2.toml  dictionary.toml  invalid_file.toml  test.toml
clafrica/data/scripts/: hi.rhai  invalid.rhai
clafrica/data/scripts/datetime/: core.rhai  date.rhai  time.rhai
clafrica/src/: api.rs  config.rs  lib.rs  main.rs  processor.rs  translator.rs
config/: Cargo.toml  README.md
config/data/: bad_script2.toml  config_sample.toml  data_sample2.toml  dictionary.toml  invalid_data.toml  invalid_translator.toml
config/data/scripts/: datetime.toml
config/src/: lib.rs
data/: clafrica_codes.txt
engine/preprocessor/: Cargo.toml  README.md
engine/preprocessor/data/: sample.txt
engine/preprocessor/src/: lib.rs  message.rs
engine/translator/: Cargo.toml  README.md
engine/translator/benches/: bench.rs
engine/translator/src/: lib.rs
memory/: Cargo.toml  README.md
memory/data/: sample.txt
memory/src/: lib.rs  utils.rs
service/: Cargo.toml
service/data/: test.toml
service/src/: convert.rs  frontend.rs  lib.rs  main.rs
service/src/frontend/: console.rs  message.rs  mod.rs
src/: lib.rs
