[workspace]
members = [
	"service",
	"config",
	"memory",
	"engine/preprocessor",
	"engine/translator",
]
default-members = ["service"]
resolver = "2"

[workspace.package]
repository = "https://github.com/pythonbrad/afrim"
license = "MPL-2.0"
readme = "README.md"
authors = ["Brady Fomegne <brady.fomegne@outlook.com>"]

