[package]
name = "clafrica-lib"
version = "0.1.1"
edition = "2021"
description = "This library contains a set of tools to make handling of clafrica code more convenient."
repository = "https://github.com/pythonbrad/clafrica"
license = "MIT"
authors = ["Fomegne Brady <fomegnemeudje@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
