[package]
name = "clafrica"
version = "0.4.0"
edition = "2021"
description = "This application allows you to type most of the characters in the african alphabet in any text field."
keywords = ["african", "ime", "typing"]
repository = "https://github.com/pythonbrad/clafrica"
license = "MIT"
readme = "../README.md"
authors = ["Brady Fomegne <fomegnemeudje@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clafrica-lib = { version = "0.3.0", path = "../clafrica-lib" }
clap = { version = "4.4.6", features = ["derive"] }
enigo = "0.1.2"
rdev = "0.5.2"
rhai = "1.15.1"
serde = { version = "1.0.163", features = ["serde_derive"] }
toml = "0.7.3"

[dev-dependencies]
rstk = "0.1.0"
