[package]
name = "afrim-config"
version = "0.4.3"
edition = "2021"
description = "Handle the configuration of the afrim input method."
keywords = ["ime", "config"]
categories = ["config"]
repository = "https://github.com/pythonbrad/afrim"
license = "MIT"
readme = "README.md"
authors = ["Brady Fomegne <fomegnemeudje@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["rhai"]
rhai = ["dep:rhai"]
rhai-wasm = ["rhai", "rhai/wasm-bindgen"]

[dependencies]
rhai = { version = "1.17.1", optional = true, features = ["only_i32", "f32_float", "no_custom_syntax"] }
indexmap = { version = "2.2.5", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
toml = { version = "0.8.10", features = ["preserve_order"] }
