[package]
name = "afrim-config"
version = "0.4.4"
edition = "2021"
description = "Handle the configuration of the afrim input method."
keywords = ["ime", "config"]
categories = ["config"]
readme = "README.md"
repository.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["rhai"]
rhai = ["dep:rhai"]
rhai-wasm = ["rhai", "rhai/wasm-bindgen"]

[dependencies]
rhai = { version = "1.17.1", optional = true, features = ["only_i32", "no_float", "no_closure", "unchecked", "no_position", "no_custom_syntax"] }
indexmap = { version = "2.2.6", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
toml = { version = "0.8.12", features = ["preserve_order"] }
anyhow = "1.0.81"
