[package]
name = "afrim-memory"
version = "0.4.0"
edition = "2021"
description = "Make the handle of sequential codes easier for an input method."
keywords = ["ime", "memory", "data-structure"]
categories = ["data-structures", "text-processing"]
repository.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
