[package]
name = "afrim"
version = "0.5.4"
edition = "2021"
description = "Core library of the afrim input method."
keywords = ["ime", "keyboard"]
categories = ["accessibility"]
repository.workspace = true
license.workspace = true
readme.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
doc = false
name = "afrim"
path = "./src/main.rs"

[features]
default = ["rhai", "strsim"]
rhai = ["afrim-config/rhai", "afrim-translator/rhai"]
strsim = ["afrim-translator/strsim"]
inhibit = ["afrim-preprocessor/inhibit"]

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
enigo = "0.1.3"
afrim-config = { version = "0.4.4", path = "../config", default-features = false }
afrim-preprocessor = { version = "0.6.0", path = "../engine/preprocessor", default-features = false }
afrim-translator = { version = "0.1.4", path = "../engine/translator", default-features = false }
rdev = "0.5.3"
anyhow = "1.0.81"

[dev-dependencies]
rstk = "0.3.0"
