[package]
name = "afrim"
version = "0.6.1"
edition = "2021"
description = "Core library of the afrim input method."
keywords = ["ime", "keyboard"]
categories = ["accessibility"]
readme = "../README.md"
repository.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
doc = true
name = "afrim"
path = "./src/main.rs"

[features]
default = ["rhai", "strsim"]
rhai = ["afrim-config/rhai", "afrim-translator/rhai"]
strsim = ["afrim-translator/strsim"]
inhibit = ["afrim-preprocessor/inhibit"]
serde = ["dep:serde", "afrim-translator/serde"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
enigo = "0.5.0"
afrim-config = { version = "0.4.6", path = "../config", default-features = false }
afrim-preprocessor = { version = "0.6.2", path = "../engine/preprocessor", default-features = false }
afrim-translator = { version = "0.2.2", path = "../engine/translator", default-features = false }
rdev = "0.5.3"
anyhow = "1.0.98"
serde = { version = "1.0.219", optional = true }

[dev-dependencies]
afrish = { version = "0.1.0", default-features = false, git = "https://github.com/fodydev/afrish", rev = "e8c4fa2" }
