[package]
name = "afrim-preprocessor"
version = "0.6.0"
edition = "2021"
description = "A preprocessor to process keyboard events for an input method."
keywords = ["ime", "processor", "keyboard"]
categories = ["hardware-support"]
repository = "https://github.com/pythonbrad/afrim"
license = "MIT"
readme = "README.md"
authors = ["Brady Fomegne <fomegnemeudje@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
inhibit = []
serde = ["dep:serde", "keyboard-types/serde"]

[dependencies]
keyboard-types = { version = "0.7.0", default-features = false }
afrim-memory = { version = "0.4.0", path = "../../memory" }
serde = { version = "1.0.197", features = ["derive"], optional = true }

[dev-dependencies]
keyboard-types = { version = "0.7.0", features = ["webdriver"] }
