[package]
name = "afrim-translator"
version = "0.2.3"
edition = "2021"
description = "Manage the predication system of the afrim input method."
keywords = ["auto-complete", "ime", "predication"]
categories = ["text-processing"]
readme = "README.md"
repository.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rhai", "strsim"]
rhai = ["dep:rhai"]
rhai-wasm = ["rhai", "rhai/wasm-bindgen"]
strsim = ["dep:strsim"]
serde = ["indexmap/serde", "rhai?/serde", "dep:serde"]

[dependencies]
rhai = { version = "1.23.4", optional = true, features = ["only_i32", "no_float", "no_closure", "unchecked", "no_position", "no_custom_syntax"] }
indexmap = { version = "2.12.0" }
strsim = { version = "0.11.1", optional = true }
serde = { version = "1.0.228", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "bench"
harness = false
